Fix: list wrap issue

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ li a:hover:not(.active) {
   width: 80vw;
   text-align: left;
   margin: 20px auto 40px auto;
+  text-wrap: wrap;
 }
 
 .skills_list_container {
